--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": {
+        "workerd": "./dist/index-workers.js",
+        "default": "./dist/index.js"
+      },
       "types": "./dist/index.d.ts"
     }
   },
