--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.9.0",
     "@cloudflare/workers-types": "^4.20250912.0",
+    "@types/chrome": "^0.1.27",
     "@types/ws": "^8.18.1",
     "@vitest/browser": "^3.2.4",
     "playwright": "^1.55.0",
